fix bug dinamic vesion (no fix static version)

--- a/source/scripts.html
+++ b/source/scripts.html
@@ -99,6 +99,7 @@
       <img id="im1" onClick="return openGallery(1, true);" /> 
       <img id="im2" onClick="return openGallery(2, true);" />
       <img id="im3" onClick="return openGallery(3, true);" />
+      <img id="im4" onClick="return openGallery(4, true);" />
 
       
    <p>По одному изображению:</p>   
@@ -108,6 +109,7 @@
       <img id="im_one_1" onClick="return openGallery(1, false);" />
       <img id="im_one_2" onClick="return openGallery(2, false);" />
       <img id="im_one_3" onClick="return openGallery(3, false);" /> 
+      <img id="im_one_4" onClick="return openGallery(4, false);" /> 
       
 	  
       <p><a href="index.html">Галерея</a></p> 
